# ClashMind

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  deploy-docs.yml
ai-service/: build.mjs  package.json  tsconfig.json
ai-service/src/: index.ts  js-yaml.d.ts  rpc-handler.ts  types.ts  utils.ts
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: ai-tools.md  tauri-ipc.md
docs/guide/: ai-service.md  architecture.md  development.md  overview.md  quickstart.md
scripts/: download-mihomo.sh
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/cmd/: ai.rs  collector.rs  config.rs  diagnosis.rs  mod.rs  proxy.rs  sidecar.rs  stats.rs  system.rs
src-tauri/src/collector/: buffer.rs  mod.rs  realtime_store.rs  ws_client.rs
src-tauri/src/core/: ai_callback.rs  anomaly.rs  diagnosis.rs  logs.rs  mihomo.rs  mod.rs  node_health.rs  notification.rs  sidecar.rs  sysproxy.rs  traffic.rs
src-tauri/src/db/: cleanup.rs  migration.rs  mod.rs  plugin.rs  repo_connection.rs  repo_conversation.rs  repo_domain.rs  repo_error_log.rs  repo_geoip.rs  repo_node_health.rs  repo_snapshot.rs  repo_traffic.rs
src-tauri/src/utils/: geoip.rs  mod.rs  path.rs  time.rs
src/hooks/: use-app-init.ts  use-theme.ts
src/lib/: constants.ts  error.ts  query-client.ts  tauri-api.ts  utils.ts
(+81 files in other folders)
